Changes for v2.07
-- Release build 1
- As v2.06 build 15 with some diagnostic printouts commented out (Graham)

Changes for v2.06
-- Release build 1
- Tweaked RMPB and included it as a publicly available new application (Graham)
- Added "Using RMPB" to the Help menus of each of RMIR, RM and RMPB (Graham)
-- Release build 2
- Fix two bugs in RMPB import from protocols.ini (Graham)
-- Private build 3
- Fix bug in the order of entries returned by Remote.getDeviceTypes() (Graham)
- Display error message if unable to copy the hidapi library (Graham)
- Fix bug causing device upgrades in segmented remotes to be sometimes mis-identified as device-dependent (Graham)
- Improve handling of highlighting by adding further checking (Graham)
- Fix bug causing wrong choice between S3C80 and S3F80 data to appear on Functions tab of Protocol Editor (Graham)
- Add Analyzer and PF Description tabs for MAXQ and TI2541 protocols in RMPB and RMIR Protocol Editor (Graham)
- Fix bug in adding protocols in .prot files to ProtocolManager (Graham)
- Revised protocols.ini to better handle RC6-6-32 and RC6-M-32 versus MCE. Added PIDs 021F and 0230 (Dave Reed)
-- Private build 4
- Replace JP1Parallel v0.02 for Windows by v0.11, which supports both 32-bit and 64-bit OS (Graham)
-- Release build 5
- In device upgrades, ignore included protocols with length < 4.  Such spurious protocols have been seen created by errors in RDFs (Graham)
- Replace JP1Parallel v0.11 for Windows by v0.12 to provide better backward compatibility (Graham)
-- Private build 6
- Fix bug preventing parallel port support from loading when RMIR opened by double-clicking a .rmir file in Windows (Graham)
-- Private build 7
- Fix issue with SimpleSet remotes not being detected on older Linux distributions (unsupported -p flag for older version of lsblk command) (Marcin)
- Add checksum calculator for binary files (Graham)
- Fix Java 9 and 10 compatibility issue (Marcin)
-- Private build 8
- Fix various bugs in RMPB (Graham)